--- a/Clustering Tornonto_Web scrapping.ipynb
+++ b/Clustering Tornonto_Web scrapping.ipynb
@@ -100,6 +100,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0587368b-d36c-4e34-bc51-aa6b698732de",
+   "metadata": {},
+   "source": [
+    "Save the df to a csv filo so it can be used later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b20de4b3-51c9-4d1a-892d-479a0b349f23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('Tornto_Neighborhood.csv')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "e9d932f4-9f06-4788-8b65-3e12659fcf3d",
